# cool_game

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  docker-compose.yml
docker/jenkins_job/: Dockerfile  cool_game.xml  entrypoint.sh
docker/jenkins_master/: Dockerfile  jenkins-plugins.txt
docker/jenkins_slave/: Dockerfile
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  Game.cpp  GameObject.cpp
test/: CMakeLists.txt  test_GameObject.cpp
